--- a/starter/build.gradle
+++ b/starter/build.gradle
@@ -1,8 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlinVersion = '1.3.72'
-    ext.navigationVersion = "2.2.0"
+    ext.kotlinVersion = '1.4.20'
+    ext.navigationVersion = "2.3.2"
 
     repositories {
         google()
@@ -10,10 +10,10 @@ buildscript {
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.1'
+        classpath 'com.android.tools.build:gradle:4.1.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
-        classpath 'com.google.gms:google-services:4.3.3'
+        classpath 'com.google.gms:google-services:4.3.4'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -44,14 +44,14 @@ ext {
     appCompatVersion = '1.2.0'
     archLifecycleVersion = '2.2.0'
     cardVersion = '1.0.0'
-    materialVersion = '1.1.0'
+    materialVersion = '1.2.1'
     fragmentVersion = '1.1.0-alpha07'
     recyclerViewVersion = '1.1.0'
     mockitoVersion = '2.8.9'
-    constraintVersion = '2.0.0-rc1'
+    constraintVersion = '2.1.0-alpha2'
     dexMakerVersion = '2.12.1'
     coroutinesVersion = '1.2.1'
-    roomVersion = '2.2.5'
+    roomVersion = '2.2.6'
     koinVersion = '2.0.1'
     truthVersion = '0.44'
     junitVersion = '4.12'
